css/theme.css
.btn {
    background-color: rgb(0, 145, 241); /* Green */
    border: none;
    color: white;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    font-family: 'Teko', sans-serif;
    width: auto;
  }

.btn:hover {
    background-color: darkslategrey;
}
.separator {
    background-color: darkcyan;
    height: 8px;
    width: auto;
}
.left-align {
    float: left;
}

#landing {
    margin-left: auto;
    margin-right: auto;
    display: inline-block;
}
.container {
    height: auto;
    width: 95%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: baseline;
}

.column {
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    align-items: center;
}
.column-item {
    order: inherit;
    min-width: 100px;
    height: auto;
}
.item {
    order: inherit;
    min-width: 50px;
    height: auto;
}

.proj-item {
    order: inherit;
    min-width: 120px;
    width:120px;
    height: auto;
}
#proj-img {
    width: 120px;
    height: auto;
}
.tile-container {
    display: flex;
    height: auto;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around; 
}
.col-item {
    order: inherit;
    min-width: 100px;
    height: auto;
}

img {
    height: 200px;
    width: 200px;
}
#img {
    height: 200px;
    width: 200px;
}
#icon {
    height: 25px;
    width: 25px;
}

body {
    background-color: dimgrey;
}

h1 {
    font-family: 'Teko', sans-serif;
    font-weight: bold;
    margin-left: 7px;
    padding-left: 7px;
}

p {
    font-family: 'Teko', sans-serif;
    margin-left: 8px;
    padding-left: 14px;
}


#header {
    padding-bottom: 15px;
    margin-top: 10px;
    margin-bottom: 15px;
}

#footer {
    margin-top: 15px;
    padding-top: 15px;
    margin-bottom: 42px;
}

